--- a/LabmediaSourceVideo.html
+++ b/LabmediaSourceVideo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Práctica 4 APIs de HTML5 alumna Montserrat Álvarez Izquierdo</title>
+    <title>Lab Media Source Video</title>
     <style>
         #progress_bar {
             margin: 30px 0;
