añadimos rama Video2

--- a/LabmediaSourceVideo.html
+++ b/LabmediaSourceVideo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- añadimos nueva rama para comenzar a trabajar con el nuevo archivo de video -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
