--- a/LabmediaSourceVideo.html
+++ b/LabmediaSourceVideo.html
@@ -56,7 +56,7 @@
     <h3>API s HTML: Media Source Extensions</h3>
 <form action="return" method="post" enctype="multipart/form-data" target="=_blank">
         <p>Sube un archivo : <input type="file" id="files" name="files[]" accept="video/mp4"
-                onchange="cargaElArchivo(files[verano.mp4, encuentro_con_delfines.mp4]);" />
+                onchange="cargaElArchivo(files[verano.mp4, encuentro-con-delfines.mp4]);" />
 
             <div id="progress_bar">
                 <div class="percent">0%</div>
@@ -101,12 +101,12 @@
                 document.getElementById('files').addEventListener('change', handleFileSelect, false);
             </script>
     <video width="400px" height="300px" 
-    id="video" poster= [foto verano.jpg, foto encuentro con delfines.jpg]>
+    id="video" poster= [foto verano.jpg, foto encuentro-con-delfines.jpg]>
 
 
     </form>
     <source src="verano.mp4" type="video/mp4">
-    <source src="encuentro_con_delfines.mp4" type="video/mp4">
+    <source src="encuentro-con-delfines.mp4" type="video/mp4">
 
     </video><br /><br>
     <div>
